# NeuralNet

./: .ycm_extra_conf.py  CMakeLists.txt  Compile.sh  README.md  test.cpp
include/: .Neuron.h.swp  Layer.h  Neuron.h  tools.h
src/: ActivationFunction.cpp  ActivationFunction.h  DataSet.cpp  DataSet.h  FullConnectionLayer.cpp  FullConnectionLayer.h  Layer.cpp  Layer.h  Linear.cpp  Linear.h  NeuralNet.cpp  NeuralNet.h  Neuron.cpp  Neuron.h  matrix.h  test.cpp  tools.cpp  tools.h
